chat index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 Hello Rafi
+<script>
+window.embeddedChatbotConfig = {
+chatbotId: "xnMdqSe9OMdrBCzUx9tjA",
+domain: "www.chatbase.co"
+}
+</script>
+<script
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="xnMdqSe9OMdrBCzUx9tjA"
+domain="www.chatbase.co"
+defer>
+</script>
